# TreeHacks

./: .gitignore  README.md  cache_intent.py  clinical_api.py  deploy.sh  diagnose.py  env.example  main.py  openai_tool_classifier.py  pyproject.toml  run_agent1.py  test_tools.py
Outputs/als_evidence/: als_candidates.json  als_candidates_summary.md  clinical_trials.json  faers_signals.json
Outputs/breast_cancer/: candidates.json  candidates_summary.md
Outputs/depression/: depression_candidates.json  depression_candidates_summary.md
Outputs/glioblastoma/: glioblastoma_candidates_summary.md
drugrescue-frontend/: index.html  package-lock.json  package.json  sync-data.js
drugrescue-frontend/src/: App.jsx  useData.js
faers_agent/: __init__.py  agent.py  client.py  detector.py  mappings.py  models.py  stats.py
files/: candidates.json  candidates_summary.md  glioblastoma_candidates.json
files/court/: advocate_brief.md  skeptic_brief.md  verdict.md  verdict_scores.json
files/evidence/: literature.json  molecular.json  summary.json  summary.md
logs/session_20260214_120907/: transcript.txt
logs/session_20260214_121052/: transcript.txt
logs/session_20260214_121531/: transcript.txt
perplexity_agent/: README.md  perplexity_agent.py
scripts/: check_coverage.py  check_lookup.py  diagnose_matching.py  discover.py  populate_drugbank_ids.py  populate_drugbank_ids_modal.py  resolve_all_compounds.py  resolve_mesh_compounds.py  warm_tool_cache.py
tests/: test_agent_tools.py  test_api_adapter.py  test_detector.py  test_server.py  test_stats.py
(+55 files in other folders)
